--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,16 @@
 mensagem.invalida=Mensagem inv\u00E1lida
 recurso.nao-encontrado=Recurso n\u00E3o encontrado
+recurso.operacao-nao-permitida= Opera\u00E7\u00E3o n\u00E3o permitida
+pessoa.inexistente-ou-inativa=Pessoa inexistente ou inativa para incluir no lan\u00E7amento
 # MENSAGENS DE VALIDACAO DA ENTIDADE CATEGORIA
 categoria.nome=Nome categoria
 # MENSAGENS DE VALIDACAO DA ENTIDADE PESSOA
 pessoa.nome= Nome pessoa
 pessoa.ativo= Ativo
+# MENSAGENS DE VALIDACAO DA ENTIDADE LANCAMENTO
+lancamento.descricao=Descri\u00E7\u00E3o
+lancamento.dataVencimento=Data de vencimento
+lancamento.valor=Valor
+lancamento.tipo=Tipo
+lancamento.categoria=Categoria
+lancamento.pessoa=Pessoa
